# Artificial-Intelligence

./: README.md
EjerciciosCLIPS/: numeros.CLP
EjerciciosCLIPS/controlTemperatura/: alarmas.out  controlTemperatura.CLP  controlTemperaturaDraft.CLP  mEntrada.CLP
EjerciciosCLIPS/leerNombres/: readNames.CLP
algoritmoGenetico/: AlgoritmoGenetico.h  README.txt  main.cpp  pruebagrafica_2.py
busquedas/: grafo.js  index.html  index.js  inspector.css  interfaz.js
clasificadorBayesiano/: carros.txt  carrosAll.txt  clasificadorIngenuo.py
damas/: CMakeLists.txt  MinMax.cpp  MinMax.h
