# CMakeList.txt : CMake project for MinMax, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("MinMax")

# Add source to this project's executable.
add_executable (MinMax "MinMax.cpp" "MinMax.h")

# TODO: Add tests and install targets if needed.
